--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -14,8 +14,17 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2 
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Set up DevContainer
         uses: devcontainers/ci@v0.3
+        imageName: ghcr.io/markhoward02/elexient-com-devcontainer
         with:
           runCmd: sh deploy.sh
 
