--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,7 +17,6 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2 
         with:
@@ -31,6 +30,7 @@ jobs:
           imageName: ghcr.io/markhoward02/elexient-com-devcontainer
           cacheFrom: ghcr.io/markhoward02/elexient-com-devcontainer
           runCmd: sh deploy.sh
+          push: never
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
