--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -26,7 +26,7 @@ jobs:
         uses: devcontainers/ci@v0.3
         with:
           imageName: ghcr.io/markhoward02/elexient-com-devcontainer
-          imageTag: latest
+          imageTag: cache
           cacheFrom: ghcr.io/markhoward02/elexient-com-devcontainer:cache
           runCmd: sh deploy.sh
           push: always
